see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

13-Nov-2010 Jean-Marie Simonet
 # [#23292] Unicode slugs lets Upper case in url, which can cause issues when SEF is on
 # [#23299] calendar css don't display week-end days
 $ [#23199] Database Error: JLIB_DATABASE_ERROR_CONNECT_DATABASE
 # [#23284] Make tabs accessible for keyboard/screen readers. Thanks Andrea.
 # [#23294] Allow archiving of category when parent category is published. Thanks Mark.
 # [#23285] Incorrect markup in com_media. Thanks Rouven.
 # [#23277] JToolbarHelper has wrong variable in generated URL. Thanks Michael and Bill.

12-Nov-2010 Jean-Marie Simonet
$ Deleted some redundant ini string

12-Nov-2010 Christophe Demko
 # Sort modules by name when selecting a new one
 + Add missing file [#23160]
 # [#23280] User can block himself in the admin
 # Fix a bad named param in mod_search

11-Nov-2010 Jean-Marie Simonet
 # [#23205] Untranslated COM_CONFIG_ACTION_ADMIN_GLOBAL_DESC. Thanks Bill
 $ Updated some xx-XX.ini files

11-Nov-2010 Christophe Demko
 # [#23242] Component Layout fields shows an error if frontend view does not exist (Andrew Eddie)

11-Nov-2010 Mark Dexter
# Temporary fix for category save bug introduced with [#23068] commit

10-Nov-2010 Christophe Demko
 # Removing an extra div + some formatting while testing [#23068]
 # [#23206] Improving permissions rules output (Dennis Hermacki)
 # [#23068] Add admin rights to article security exploit (Louis Landry)

10-Nov-2010 Jean-Marie Simonet
 $ Updating admin lang xmls
 # [#23195] Prevent defacement of sites by specifying ?tmpl=offline. Thanks Rouven.