@@ -39,7 +39,6 @@ function iFrameHeight() {
 	width="<?php echo $this->params->get('width'); ?>"
 	height="<?php echo $this->params->get('height'); ?>"
 	scrolling="<?php echo $this->params->get('scrolling'); ?>"
-	align="top"
 	frameborder="0"
 	class="wrapper<?php echo $this->params->get('pageclass_sfx'); ?>">
 	<?php echo JText::_('COM_WRAPPER_NO_IFRAMES'); ?>
