@@ -25,7 +25,7 @@ function modChrome_table($module, &$params, &$attribs)
 	<table cellpadding="0" cellspacing="0" class="moduletable<?php echo $params->get('moduleclass_sfx'); ?>">
 	<?php if ($module->showtitle != 0) : ?>
 		<tr>
-			<th valign="top">
+			<th>
 				<?php echo $module->title; ?>
 			</th>
 		</tr>
@@ -46,7 +46,7 @@ function modChrome_horz($module, &$params, &$attribs)
 { ?>
 	<table cellspacing="1" cellpadding="0" border="0" width="100%">
 		<tr>
-			<td valign="top">
+			<td>
 				<?php modChrome_table($module, $params, $attribs); ?>
 			</td>
 		</tr>
