@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+14-Nov-2010 Christophe Demko
+ # [#23167] Remove align and valign attributes from the site (Rouven Weßling)
+
 13-Nov-2010 Jean-Marie Simonet
  # [#23292] Unicode slugs lets Upper case in url, which can cause issues when SEF is on
  # [#23299] calendar css don't display week-end days
